# 2023_robot_code_py

./: .deploy_cfg  README.md  entry.py  physics.py  pyproject.toml  simgui-ds.json  simgui-window.json  simgui.json
.Glass/: glass-window.json  glass.json
robot/: __init__.py  __main__.py  constants.py  physics.py  robot.py
robot/auto/: __init__.py  routes.py  selector.py  trajectory.py
robot/subsystems/: arm.py  claw.py  drivetrain.py
robot/util/: cmd.py  fake_spark_max.py
