[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Patrick Brennan", email = "brennanpatrick20@gmail.com"},
]
requires-python = ">=3.7,<3.12"
license = {text = "MIT"}
dependencies = [
    "robotpy>=2023.4.3.0",
    "robotpy-ctre>=2023.1.0",
    "robotpy-rev>=2023.1.3.2",
]
