
[project]
name = "2023RobotCode"
version = "0.0.1"
description = "Robot code for our 2023 robot, Bender"
authors = [
    {name = "Patrick Brennan", email = "brennanpatrick20@gmail.com"},
]
requires-python = ">=3.7,<3.12"
license = {text = "MIT"}

dependencies = [
    "robotpy>=2023.4.3.0",
    "robotpy-ctre>=2023.1.0",
    "robotpy-rev>=2023.1.3.2",
    "robotpy-commands-v2>=2023.4.3.0",
]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "setuptools>=67.6.1",
]

[tool.pdm.scripts]
robot = "python entry.py"
sim = "python entry.py sim"
deploy = "python entry.py deploy --nonstandard"
format = "black ."